# RH_sistema

backend/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile
backend/migration/src/: lib.rs  m20250718_172400_create_curriculo_table.rs  m20250718_172400_create_resume_table.rs  m20250718_173430_create_sector_table.rs  m20250718_173430_create_setor_table.rs
backend/src/: app.rs  jwt.rs  main.rs
backend/src/configs/: app.rs  database.rs  jwt.rs  mod.rs
backend/src/connections/: database.rs  mod.rs
backend/src/entities/: curriculo.rs  mod.rs  resume.rs  sector.rs  setor.rs
backend/src/handlers/: mod.rs
backend/src/handlers/resume/: create.rs  download.rs  edit.rs  edit_interview_date.rs  hire.rs  list.rs  mod.rs  pages.rs  preview.rs  upload.rs  view.rs
backend/src/handlers/sector/: list.rs
backend/src/handlers/user/: login.rs
backend/src/routes/: login.rs  mod.rs  resume.rs  sector.rs
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/api/login/: route.ts
frontend/src/app/api/logoff/: route.ts
frontend/src/app/api/resume/download/: route.ts
frontend/src/app/api/resume/hire/: route.ts
frontend/src/app/api/resume/list/: route.ts
frontend/src/app/login/: page.tsx
frontend/src/app/resume/create/: page.tsx
frontend/src/app/resume/list/: page.tsx
frontend/src/components/: logoff-button.tsx  pagination.tsx  sidebar.tsx  table-body-resume.tsx  table-checkbox.tsx  table-dropdown-menu.tsx
frontend/src/components/ui/: sidebar.tsx
(+4 files in other folders)
