[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "migration"
]

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
migration = { path = "migration" }
sea-orm = { version = "1.1.13", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["macros", "rt", "sync"] }
tower-http = { version = "0.6.6", features = ["fs"] }
validator = { version = "0.20.0", features = ["derive"] }
